[project]
name = "xm2xl"
version = "0.2.1"
authors = [
  { name="Sébastien LAUTIER", email="sebastien.lautier@gmail.com" },
]
description = "Flatten Xmind file into xlsx sheet"
readme = "README.md"
requires-python = ">=3.9.16"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "et-xmlfile>=1.1.0",
    "fire>=0.5.0",
    "numpy>=1.24.2",
    "openpyxl>=3.1.1",
    "pandas>=1.5.3",
    "pefile>=2023.2.7",
    "python-dateutil>=2.8.2",
    "pytz>=2022.7.1",
    "pywin32-ctypes>=0.2.0",
    "six>=1.16.0",
    "termcolor>=2.2.0",
    "wincertstore>=0.2",
    "XMind>=1.2.0"
]

[project.urls]
"Homepage" = "https://github.com/sebastien17/xm2xl"
"Bug Tracker" = "https://github.com/sebastien17/xm2xl/issues"

[project.scripts]
xm2xl = "xm2xl.xm2xl:__execute"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
]
exclude = [
  "requirements.txt"
]
